whiteboard header changes, fixed taskCard bug where prio/length not showing

--- a/bizi-boardz/src/styles/PopupWhiteboard.css
+++ b/bizi-boardz/src/styles/PopupWhiteboard.css
@@ -12,45 +12,117 @@
 }
 
 .whiteboard-header{
-    background-color: red;
+    background-color: var(--bizi-dark);
     width: 100%;
-    padding: 2px;
-    height: 42px;
+    height: 60px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .whiteboard-task-name{
-    background-color: blue;
-    color: green;
+    /* background-color: blue; */
+    overflow: hidden;
+    color: var(--bizi-yellow );
+    width: 500px;
     font-size: 24px;
     font-weight: 600;
     display: flex;
-    align-items:center;
+    align-items: center;
+    margin-left: 32px;
 }
 
 .whiteboard-toolbar{
-    background-color: pink;
+    background-color: #E7E5DF44;
     color: black;
-    width: 700px;
+    /* width: 700px; */
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 8px 0; 
+    border-radius: 10px;
+    padding: 0 8px;
+}
+
+.whiteboard-toolbar .tool-btn{
+    /* background-color:; */
+    color: black;
+    height: 24px;
+    width: 24px;
+    border: 0;
+    margin: 0 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tool-btn:hover{
+    cursor: pointer;
+}
+
+.tool-btn:active{
+    background-color: red;
+}
+
+.color-white{
+    color: #E7E5DF !important;
+}
+
+.color-red{
+    color: red !important;
+}
+
+.color-blue{
+    color: dodgerblue !important;
+}
+
+.color-green{
+    color: limegreen !important;
+}
+
+.bg-white{
+    background-color: #E7E5DF !important;
+}
+
+.bg-red{
+    background-color: red !important;
+}
+
+.bg-blue{
+    background-color: dodgerblue !important;
+}
+
+.bg-green{
+    background-color:limegreen !important;
+}
+
+.whiteboard-toolbar .vertical-divider{
+    background-color: black;
+    margin: 0 12px;
+    width: 4px;
+    height: 88%;
+    border-radius: 100px;
 }
 
 .whiteboard-header .close-btn{
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: end;
     width: 32px;
+    height: 80%;
     border: 0;
     padding: 0;
     color: var(--bizi-white);
     background-color: var(--bizi-dark);
+    margin-right: 32px;
 }
 
 .whiteboard-body{
-    background-color: var(--bizi-white);
+    background-color: #E7E5DF44;
     width: 96%;
-    height: calc(100% - 82px);
-    margin: 20px;
-    border-radius: 10px;
+    height: calc(100% - 62px);
+    margin: 0 20px 20px 20px;
+    /* border-radius: 10px; */
 
 }
